[gd_scene load_steps=3 format=3 uid="uid://cgdnd8lragkbe"]

[ext_resource type="Script" path="res://Player/player_attack.gd" id="1_f4xvc"]
[ext_resource type="PackedScene" uid="uid://dq6joq70c5llr" path="res://OtherComponents/SingleBulletAttack/single_bullet_attack.tscn" id="2_im45r"]

[node name="PlayerAttack" type="Node2D"]
script = ExtResource("1_f4xvc")

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="SingleBulletAttack" parent="." instance=ExtResource("2_im45r")]

[node name="WeaponSwapCooldown" type="Timer" parent="."]
one_shot = true
